--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,12 +48,12 @@
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item> <!-- hold numbers -->
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item> <!-- grip types -->
 
-        <item>5B Benchmark for repeaters</item>
+        <item>5B Benchmark for repeaters. Only four finger grip</item>
         <item>3,6,7,3,3,150,300</item>
         <item>6,6,3,3,3,6</item>
         <item>1,1,1,1,1,1</item>
 
-        <item>5C Benchmark repeaters for basic grips</item>
+        <item>5C Benchmark repeaters for basic grips. Intro to three finger grips</item>
         <item>5,6,7,3,2,150,300</item>
         <item>6,10,6,6,3,10,8,8,8,8</item>
         <item>1,1,1,1,1,1,2,2,3,3</item>
@@ -63,19 +63,39 @@
         <item>10,10,6,10,3,10,8,8,5,8,5,8</item>
         <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
 
-        <item>6B Benchmark repeaters for wide range of grips</item>
+        <item>6A+ Benchmark repeaters for basic grips</item>
         <item>6,6,7,3,2,140,300</item>
+        <item>10,10,6,10,3,10,5,8,5,8,8,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark repeaters for wide range of grips. Two finger pocket included</item>
+        <item>6,6,7,3,2,140,300</item>
+        <item>10,10,3,2,5,5,8,10,5,6,7,7</item>
+        <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
+
+        <item>6B+ Benchmark repeaters for wide range of grips.</item>
+        <item>6,6,7,3,2,130,300</item>
         <item>10,10,3,2,5,5,8,10,5,5,7,7</item>
         <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
 
         <item>6C Benchmark repeaters for wide range of grips</item>
         <item>6,6,7,3,2,130,300</item>
+        <item>10,4,10,4,5,12,5,12,7,7,7,6</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>6C+ Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,120,300</item>
         <item>10,4,10,4,5,12,5,12,7,7,7,11</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7A Benchmark repeaters for wide range of grips</item>
         <item>6,6,7,3,2,120,240</item>
-        <item>4,4,10,2,10,12,12,12,7,8,7,10</item>
+        <item>4,4,10,2,10,12,12,12,7,6,7,10</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7A+ Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,110,240</item>
+        <item>4,4,10,2,10,12,12,10,7,6,7,10</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7B Benchmark repeaters for wide range of grips</item>
@@ -83,15 +103,25 @@
         <item>4,2,4,4,10,10,10,12,11,7,11,11</item>
         <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
 
-        <item>7C Benchmark repeaters for wide range of grips</item>
+        <item>7B+ Benchmark repeaters for wide range of grips</item>
         <item>6,6,7,3,2,100,240</item>
+        <item>4,2,4,4,10,10,10,10,11,7,11,11</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,100,180</item>
         <item>2,2,10,4,10,4,11,11,5,5,7,7</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>7C+ Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>2,2,10,4,10,4,11,11,5,10,7,7</item>
         <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
 
         <item>8A Benchmark repeaters for wide range of grips</item>
         <item>12,6,7,3,1,90,1</item>
-        <item>2,2,4,4,2,10,4,4,4,10,11,11,11,10,10,10,10,11,7,7,7,6,7,7</item>
-        <item>1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6,8,8</item>
+        <item>2,2,2,4,4,4,2,10,4,4,4,10,11,11,11,10,10,10,10,11,7,7,7,6</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6</item>
         <!--
 
         <item>6B Benchmark</item>
@@ -103,10 +133,55 @@
     </string-array>
 
     <string-array name="bm2000_benchmarks">
-        <item>Test benchmark for bm 2000</item> <!-- Benchmark Description -->
-        <item>6,6,7,3,3,150,360</item> <!-- time controls -->
-        <item>1,1,2,2,3,3,4,4,5,5,6,6</item> <!-- hold numbers -->
-        <item>1,1,2,2,3,3,4,4,5,5,6,6</item> <!-- grip types -->
+        <item>5B Benchmark for repeaters</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>6,6,3,3,3,6</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>5C Benchmark repeaters for basic grips</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>6,6,3,3,6,3,10,6,3,10</item>
+        <item>1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6A Benchmark repeaters for basic grips</item>
+        <item>6,6,7,3,2,150,300</item>
+        <item>10,11,6,15,3,3,6,15,4,6,4,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,140,300</item>
+        <item>10,11,3,11,6,15,11,3,15,6,4,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,130,300</item>
+        <item>11,11,15,11,3,2,6,3,6,15,8,8</item>
+        <item>1,1,1,1,1,1,2,2,3,3,5,5</item>
+
+   <!--     <item>7A Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,120,240</item>
+        <item></item>
+        <item></item>
+
+        <item>7B Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,110,240</item>
+        <item></item>
+        <item></item>
+
+        <item>7C Benchmark repeaters for wide range of grips</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item></item>
+        <item></item>
+
+        <item>8A Benchmark repeaters for wide range of grips</item>
+        <item>12,6,7,3,1,90,1</item>
+        <item></item>
+        <item></item>
+-->
+        <item>8C Benchmark for repeaters and mastering all grips!</item>
+        <item>10,6,7,3,1,80,1</item>
+        <item>1,1,5,2,11,2,9,13,14,13,9,9,12,7,12,12,7,7,7,7</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6,7,7,8,8,9,9,10,10</item>
 
     </string-array>
 
