--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,146 +42,6 @@
     to steadily increase every variable over time if progression is achieved.</string>
 
 
-    <string-array name="zlag_benchmarks">
-
-
-        <item>5C Benchmark (Single hangs)</item>
-        <item>6,1,10,0,3,50,120</item>
-        <item>4,6,6,4,1,4,4,1,1,6,6,1</item>
-        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
-
-        <item>6A Benchmark (Single hangs)</item>
-        <item>8,1,10,0,3,50,120</item>
-        <item>4,6,6,4,4,4,4,11,11,4,4,4,4,6,6,4</item>
-        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
-
-        <item>6A+ Benchmark (Single hangs)</item>
-        <item>8,1,10,0,3,45,120</item>
-        <item>4,6,6,4,4,11,11,4,6,6,4,4,4,6,6,4</item>
-        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
-
-        <item>6B Benchmark (Single hangs)</item>
-        <item>7,1,10,0,3,45,100</item>
-        <item>7,7,7,11,11,7,6,7,7,6,4,11,11,4</item>
-        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
-
-        <item>6B+ Benchmark (Single hangs)</item>
-        <item>7,1,10,0,3,40,100</item>
-        <item>7,7,7,2,2,7,5,5,4,4,7,6,6,7</item>
-        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
-
-        <item>6C Benchmark (Single hangs)</item>
-        <item>8,1,10,0,3,40,100</item>
-        <item>2,2,7,7,7,12,12,7,5,11,11,5,7,7,5,5</item>
-        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
-
-        <item>6C+ Benchmark (Single hangs)</item>
-        <item>8,1,10,0,3,40,100</item>
-        <item>2,12,12,2,7,12,12,7,5,11,11,5,7,7,5,5</item>
-        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
-
-        <item>7A Benchmark (Single hangs)</item>
-        <item>12,1,10,0,2,40,80</item>
-        <item>12,2,2,12,2,15,15,2,15,12,12,15,4,15,15,4,7,7,5,7,7,5,9,9</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5</item>
-
-        <item>7A+ Benchmark (Single hangs)</item>
-        <item>12,1,10,0,2,35,80</item>
-        <item>12,12,2,15,15,2,15,12,12,15,4,15,15,4,7,7,5,7,7,5,7,7,9,9</item>
-        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,5,5</item>
-
-        <item>7B Benchmark (Single hangs)</item>
-        <item>9,1,10,0,3,35,80</item>
-        <item>12,12,12,12,5,15,15,5,7,15,15,7,9,9,9,14,14,9</item>
-        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
-
-        <item>7B+ Benchmark (Single hangs)</item>
-        <item>9,1,10,0,3,30,80</item>
-        <item>12,12,12,12,6,12,12,6,5,15,15,5,9,9,9,14,14,9</item>
-        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
-
-                <item>7C Benchmark (Single hangs)</item>
-                <item>10,1,10,0,2,30,60</item>
-                <item>12,12,2,12,12,2,15,12,12,15,9,14,14,9,14,14,9,9,13,13</item>
-                <item>1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,6,6,8,8</item>
-
-        <item>8A Benchmark (Single hangs)</item>
-        <item>11,1,10,0,3,30,60</item>
-        <item>12,12,2,2,12,12,12,12,9,14,14,9,14,14,9,9,13,13,13,8,8,13</item>
-        <item>1,1,2,2,2,2,3,3,4,4,4,4,5,5,6,6,7,7,8,8,8,8</item>
-
-
-        <item>5B Benchmark for repeaters. Only Jugs (hold 1)</item>
-        <item>3,6,7,3,3,150,300</item>
-        <item>1,1,1,6,1,4</item>
-        <item>1,1,1,1,1,1</item>
-
-        <item>6A Benchmark for repeaters, intro to three finger grips</item>
-        <item>5,6,7,3,2,150,300</item>
-        <item>1,4,4,4,4,6,1,4,1,6</item>
-        <item>1,1,1,1,1,1,2,2,3,3</item>
-
-        <item>6A+ Benchmark for repeaters</item>
-        <item>5,6,7,3,2,140,300</item>
-        <item>1,2,4,4,4,6,1,4,1,6</item>
-        <item>1,1,1,1,1,1,2,2,3,3</item>
-
-        <item>6B Benchmark for repeaters</item>
-        <item>5,6,7,3,2,140,300</item>
-        <item>4,4,4,11,6,7,4,4,4,4</item>
-        <item>1,1,1,1,1,1,2,2,3,3</item>
-
-        <item>6B+ Benchmark for repeaters</item>
-        <item>5,6,7,3,2,130,300</item>
-        <item>4,4,4,11,6,7,4,4,4,4</item>
-        <item>1,1,1,1,1,1,2,2,3,3</item>
-
-        <item>6C Benchmark for repeaters, first 20mm hold</item>
-        <item>5,6,7,3,2,130,300</item>
-        <item>7,7,7,11,4,4,11,4,4,4</item>
-        <item>1,1,1,1,2,2,2,2,3,3</item>
-
-        <item>6C+ Benchmark for repeaters</item>
-        <item>5,6,7,3,2,120,300</item>
-        <item>7,7,2,11,4,4,11,4,4,4</item>
-        <item>1,1,1,1,2,2,2,2,3,3</item>
-
-        <item>7A Benchmark for repeaters, first slopers</item>
-        <item>5,6,7,3,2,120,240</item>
-        <item>7,15,2,2,5,4,6,5,6,7</item>
-        <item>1,1,1,1,2,2,2,2,3,3</item>
-
-        <item>7A+ Benchmark for repeaters,</item>
-        <item>5,6,7,3,2,110,240</item>
-        <item>2,15,2,2,5,4,6,2,6,7</item>
-        <item>1,1,1,1,2,2,2,2,3,3</item>
-
-        <item>7B Benchmark repeaters, two finger grip is tested here</item>
-        <item>5,6,7,3,2,110,240</item>
-        <item>7,12,2,15,4,15,5,5,9,9</item>
-        <item>1,1,1,1,2,2,2,2,3,3,5,5</item>
-
-        <item>7B+ Benchmark repeaters, two finger grip is tested here</item>
-        <item>5,6,7,3,2,100,240</item>
-        <item>7,12,2,12,4,15,5,5,9,9</item>
-        <item>1,1,1,1,2,2,3,3,5,5</item>
-
-        <item>7C Benchmark repeaters</item>
-        <item>6,6,7,3,2,100,180</item>
-        <item>12,12,15,12,5,15,7,15,9,9,9,14</item>
-        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
-
-        <item>7C+ Benchmark repeaters</item>
-        <item>6,6,7,3,2,90,180</item>
-        <item>12,12,5,15,7,15,9,9,9,9,9,14</item>
-        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
-
-        <item>8A Benchmark repeaters, intro to mono pocket</item>
-        <item>6,6,7,3,2,90,300</item>
-        <item>12,12,12,2,12,15,9,14,14,14,13,13</item>
-        <item>1,1,2,2,3,3,4,4,5,5,8,8</item>
-    </string-array>
-
     <string-array name="bm1000_benchmarks">
         <item>5C Benchmark (Single hangs)</item>
         <item>6,1,10,0,3,50,120</item>
@@ -322,13 +182,11 @@
         <item>12,6,7,3,1,90,1</item>
         <item>2,2,2,4,4,4,2,10,4,4,4,10,11,11,11,10,10,10,10,11,7,7,7,6</item>
         <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6</item>
-<!--
 
         <item>6C Benchmark. Master of four finger grip, every combination of four finger grip excluding Jug </item>
         <item>20,1,10,0,1,40,1</item>
         <item>9,6,9,3,9,10,9,4,9,2,6,6,6,3,6,10,6,4,6,2,3,3,3,10,3,4,3,2,10,10,10,4,10,2,4,4,4,2,2,2</item>
         <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1</item>
--->
 
         <!--
 
@@ -515,39 +373,99 @@
     </string-array>
 
     <string-array name="tension_benchmarks">
+        <item>5C Benchmark (Single hangs)</item>
+        <item>4,1,10,0,3,50,120</item>
+        <item>6,2,2,2,6,4,4,4</item>
+        <item>1,1,1,1,1,1,1,1</item>
+
+        <item>6A Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,50,120</item>
+        <item>6,5,2,2,6,4,4,4,2,4,4,2,2,2</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6B Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>5,5,4,7,7,4,4,5,5,4,2,4,4,2</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>11,2,2,11,2,2,11,5,5,11,4,11,11,4,8,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>2,2,10,1,1,10,15,11,11,15,3,11,11,3,5,11,11,5,8,8,8,9,9,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>2,2,11,11,11,15,15,11,8,9,9,8,8,13,13,8,8,8</item>
+        <item>1,1,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6</item>
+
+        <item>7C Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>2,1,1,2,11,2,2,11,11,11,9,9,13,13,8,9,9,8</item>
+        <item>1,1,1,1,2,2,2,2,3,3,4,4,5,5,6,6,6,6</item>
+
         <item>5B Benchmark for repeaters</item>
         <item>3,6,7,3,3,150,300</item>
         <item>2,6,1,1,1,6</item>
         <item>1,1,1,1,1,1</item>
 
         <item>6A Benchmark for repeaters</item>
-        <item>6,6,7,3,2,140,300</item>
-        <item>2,2,4,4,4,2,4,4,2,6,4,4</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>4,6,7,3,2,150,300</item>
+        <item>2,2,4,4,4,2,2,6</item>
+        <item>1,1,1,1,1,1,1,1</item>
+
+        <item>6A+ Benchmark for repeaters</item>
+        <item>4,6,7,3,2,140,300</item>
+        <item>2,2,4,4,4,2,4,6</item>
+        <item>1,1,1,1,1,1,1,1</item>
 
         <item>6B Benchmark for repeaters, prepare your three finger game</item>
-        <item>6,6,7,3,2,140,300</item>
-        <item>2,2,4,4,4,2,4,4,2,6,2,6</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>4,4,4,2,4,4,2,6,2,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark for repeaters, prepare your three finger game</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>4,5,4,2,4,4,4,6,2,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6C Benchmark for repeaters</item>
-        <item>6,6,7,3,2,130,300</item>
-        <item>5,5,5,9,4,9,2,4,4,4,2,4</item>
-        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>5,5,5,9,2,4,4,4,2,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6C+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>5,7,5,9,2,4,4,4,2,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
 
         <item>7A Benchmark for repeaters</item>
-        <item>6,6,7,3,2,120,240</item>
-        <item>7,7,5,8,5,9,4,9,5,9,4,4</item>
-        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>7,7,5,8,5,9,5,9,4,4</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>7A+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>7,8,5,8,5,9,5,9,4,4</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
 
         <item>7B Benchmark for repeaters</item>
-        <item>6,6,7,3,2,110,240</item>
-        <item>8,8,5,7,4,7,5,8,4,7,2,6</item>
-        <item>1,1,2,2,2,2,3,3,3,3,5,5</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>8,8,5,7,4,7,4,7,2,6</item>
+        <item>1,1,2,2,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>8,8,7,7,4,7,5,7,2,6</item>
+        <item>1,1,2,2,2,2,3,3,5,5</item>
 
         <item>7C Benchmark for repeaters, index and pinky have to work together</item>
         <item>6,6,7,3,2,100,180</item>
-        <item>7,7,7,8,7,7,9,7,2,6,2,4</item>
+        <item>7,7,7,8,7,7,9,8,2,6,2,4</item>
         <item>2,2,2,2,3,3,3,3,4,4,5,5</item>
 <!--
 
@@ -558,6 +476,148 @@
 -->
 
     </string-array>
+
+
+    <string-array name="zlag_benchmarks">
+
+
+        <item>5C Benchmark (Single hangs)</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>4,6,6,4,1,4,4,1,1,6,6,1</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6A Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>4,6,6,4,4,4,4,11,11,4,4,4,4,6,6,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6A+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>4,6,6,4,4,11,11,4,6,6,4,4,4,6,6,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>7,7,7,11,11,7,6,7,7,6,4,11,11,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>7,7,7,2,2,7,5,5,4,4,7,6,6,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,2,7,7,7,12,12,7,5,11,11,5,7,7,5,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,12,12,2,7,12,12,7,5,11,11,5,7,7,5,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>7A Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>12,2,2,12,2,15,15,2,15,12,12,15,4,15,15,4,7,7,5,7,7,5,9,9</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A+ Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>12,12,2,15,15,2,15,12,12,15,4,15,15,4,7,7,5,7,7,5,7,7,9,9</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,5,5</item>
+
+        <item>7B Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>12,12,12,12,5,15,15,5,7,15,15,7,9,9,9,14,14,9</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B+ Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>12,12,12,12,6,12,12,6,5,15,15,5,9,9,9,14,14,9</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7C Benchmark (Single hangs)</item>
+        <item>10,1,10,0,2,30,60</item>
+        <item>12,12,2,12,12,2,15,12,12,15,9,14,14,9,14,14,9,9,13,13</item>
+        <item>1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,6,6,8,8</item>
+
+        <item>8A Benchmark (Single hangs)</item>
+        <item>11,1,10,0,3,30,60</item>
+        <item>12,12,2,2,12,12,12,12,9,14,14,9,14,14,9,9,13,13,13,8,8,13</item>
+        <item>1,1,2,2,2,2,3,3,4,4,4,4,5,5,6,6,7,7,8,8,8,8</item>
+
+
+        <item>5B Benchmark for repeaters. Only Jugs (hold 1)</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>1,1,1,6,1,4</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark for repeaters, intro to three finger grips</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>1,4,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>1,2,4,4,4,6,1,4,1,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark for repeaters</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>4,4,4,11,6,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>4,4,4,11,6,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark for repeaters, first 20mm hold</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>7,7,7,11,4,4,11,4,4,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6C+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>7,7,2,11,4,4,11,4,4,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7A Benchmark for repeaters, first slopers</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>7,15,2,2,5,4,6,5,6,7</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7A+ Benchmark for repeaters,</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>2,15,2,2,5,4,6,2,6,7</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7B Benchmark repeaters, two finger grip is tested here</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>7,12,2,15,4,15,5,5,9,9</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark repeaters, two finger grip is tested here</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>7,12,2,12,4,15,5,5,9,9</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7C Benchmark repeaters</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>12,12,15,12,5,15,7,15,9,9,9,14</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C+ Benchmark repeaters</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>12,12,5,15,7,15,9,9,9,14,9,9</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>8A Benchmark repeaters, intro to mono pocket</item>
+        <item>6,6,7,3,2,90,300</item>
+        <item>12,12,12,2,12,15,9,14,14,14,13,13</item>
+        <item>1,1,2,2,3,3,4,4,5,5,8,8</item>
+    </string-array>
+
 
     <string-array name="noBenchmarks">
         <item>There are currently no benchmark programs in this hangboard</item>
