--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,59 +283,59 @@
         <item>1,1,1,1,1,1</item>
 
         <item>5C Benchmark for repeaters</item>
-        <item>5,6,7,3,2,150,300</item>
-        <item>6,6,3,3,6,3,10,6,3,10</item>
-        <item>1,1,1,1,1,1,1,1,1,1</item>
+        <item>4,6,7,3,2,150,300</item>
+        <item>6,6,3,3,6,3,10,6</item>
+        <item>1,1,1,1,1,1,1,1</item>
 
         <item>6A Benchmark for repeaters</item>
-        <item>6,6,7,3,2,150,300</item>
-        <item>10,11,6,15,3,3,6,15,4,6,4,6</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>10,11,6,15,3,15,10,6,4,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6A+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,140,300</item>
-        <item>10,11,6,15,3,15,6,15,4,6,4,6</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>10,11,6,15,3,15,4,6,10,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6B Benchmark for repeaters</item>
-        <item>6,6,7,3,2,140,300</item>
-        <item>10,11,3,11,6,15,11,3,15,6,4,6</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>10,11,3,11,6,15,15,6,4,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6B+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,130,300</item>
-        <item>10,11,3,11,6,11,11,3,15,6,4,6</item>
-        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>10,11,3,11,6,11,15,6,4,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
 
         <item>6C Benchmark for repeaters</item>
-        <item>6,6,7,3,2,130,300</item>
-        <item>11,11,15,11,3,2,6,3,6,15,8,8</item>
-        <item>1,1,1,1,1,1,2,2,3,3,5,5</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>11,11,15,11,6,3,6,15,8,8</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
 
         <item>6C+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,120,300</item>
-        <item>11,11,15,11,3,2,6,5,6,15,8,8</item>
-        <item>1,1,1,1,1,1,2,2,3,3,5,5</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>11,11,3,2,6,5,6,15,8,8</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
 
         <item>7A Benchmark for repeaters</item>
-        <item>6,6,7,3,2,120,240</item>
-        <item>6,2,15,2,6,15,4,11,8,8,8,9</item>
-        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>6,2,6,15,4,11,8,8,8,9</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7A+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,110,240</item>
-        <item>6,2,15,2,6,11,4,11,8,8,8,9</item>
-        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>15,2,6,11,4,11,8,8,8,9</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7B Benchmark for repeaters</item>
-        <item>6,6,7,3,2,110,240</item>
-        <item>11,2,15,2,5,11,4,11,8,9,8,13</item>
-        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>11,2,5,11,4,11,8,9,8,13</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7B+ Benchmark for repeaters</item>
-        <item>6,6,7,3,2,110,240</item>
-        <item>11,2,15,2,5,11,5,11,8,9,8,13</item>
-        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>11,2,5,11,5,11,8,9,8,13</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7C Benchmark for repeaters, index and pinky have to work together</item>
         <item>6,6,7,3,2,100,180</item>
@@ -745,10 +745,135 @@
     </string-array>
 
     <string-array name="edge_benchmarks">
-        <item>There are currently no benchmark programs in this hangboard</item>
-        <item>6,6,7,3,150,360</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+
+        <item>6A Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>5,5,6,6,5,7,7,5,4,4,4,5,5,4,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3</item>
+
+        <item>6A+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>5,5,6,6,3,7,7,3,4,4,4,5,5,4,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3</item>
+
+
+        <item>6B Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>6,6,7,7,6,8,8,6,5,5,4,5,5,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3,3,3</item>
+
+
+        <item>6B+ Benchmark (Single hangs)</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>7,7,6,8,8,6,5,6,6,5,4,5,5,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6C Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>8,8,9,8,8,9,7,10,10,7,6,6,5,6,6,5</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark (Single hangs)</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>8,8,9,2,2,9,8,10,10,8,5,7,7,5,6,6</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+
+        <item>7A Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>9,9,9,10,10,9,10,10,2,2,6,8,8,6,5,9,9,5,7,7,6,8,8,6</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,3,3,3,3,3,3</item>
+
+        <item>7A+ Benchmark (Single hangs)</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>9,9,9,11,11,9,10,10,2,2,6,8,8,6,5,10,10,5,7,7,6,9,9,6</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,3,3,3,3,3,3</item>
+
+
+        <item>7B Benchmark (Single hangs)</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>11,11,11,12,12,11,8,8,7,9,9,7,7,8,8,7,4,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7B+ Benchmark (Single hangs)</item>
+        <item>10,1,10,0,3,30,80</item>
+        <item>11,12,12,11,8,8,7,9,9,7,8,8,7,9,9,7,4,5,5,4</item>
+        <item>1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,5,5,5,5</item>
+
+
+        <item>7C Benchmark (Single hangs)</item>
+        <item>10,1,10,0,2,30,60</item>
+        <item>12,12,9,9,10,9,9,10,10,10,8,9,9,8,9,9,4,4,5,5</item>
+        <item>1,1,2,2,2,2,2,2,2,2,3,3,3,3,3,3,4,4,5,5</item>
+
+
+
+        <item>6A Benchmark for repeaters</item>
+        <item>4,6,7,3,2,150,300</item>
+        <item>4,5,4,6,4,3,5,5</item>
+        <item>1,1,1,1,1,1,1,1</item>
+
+        <item>6A+ Benchmark for repeaters</item>
+        <item>4,6,7,3,2,140,300</item>
+        <item>4,6,4,3,5,5,4,4</item>
+        <item>1,1,1,1,1,1,2,2</item>
+
+
+        <item>6B Benchmark for repeaters</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>5,7,5,6,3,3,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>5,7,3,6,3,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+
+        <item>6C Benchmark for repeaters</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>6,6,5,8,3,7,4,6,4,5</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>7,7,6,8,3,7,4,5,4,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>7A Benchmark for repeaters</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>8,8,2,7,6,9,5,6,5,5</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>7A+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>9,9,2,7,6,9,6,6,5,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+
+        <item>7B Benchmark for repeaters</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>10,10,2,2,5,7,6,7,6,6</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7B+ Benchmark for repeaters</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>11,11,2,2,6,7,6,6,4,4</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+
+        <item>7C Benchmark for repeaters</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>12,12,1,1,8,8,7,7,4,4,4,5</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C+ Benchmark for repeaters</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>12,12,1,1,9,9,8,8,4,5,5,6</item>
+        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+
     </string-array>
 
     <string-array name="soillboost_benchmarks">
