--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,7 +168,7 @@
         <item>7A+ Benchmark</item><item>Grips &amp; Grades test</item>
         <item>5,6,7,3,2,110,240</item>
         <item>4,4,10,12,12,10,7,6,7,10</item>
-        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
 
         <item>7B Benchmark</item><item>Grips &amp; Grades test</item>
         <item>5,6,7,3,2,110,240</item>
@@ -678,17 +678,96 @@
     </string-array>
 
     <string-array name="moonhard_benchmarks">
-        <item>no programs</item><item>Grips &amp; Grades test</item>
-        <item>6,6,7,3,150,360</item>
+        <item>6A Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>1,1,1,3,3,1,1,4,4,1,3,3,</item>
         <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6A+ Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,45,120</item>
+        <item>1,3,3,1,1,4,4,1,4,3,3,4</item>
         <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6B Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>1,7,7,1,3,4,4,3,1,6,6,1,4,4</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6B+ Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>3,7,7,3,3,4,4,3,1,6,6,1,4,4</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6C Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>3,7,7,3,7,7,3,6,6,3,1,1,1,1,</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C+ Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>7,7,3,6,6,3,6,6,1,3,3,1,1,1</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+
+        <item>7A Benchmark</item><item>Intro to two finger pocket</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>6,4,4,6,7,6,6,7,6,6,1,3,3,1,1,4,4,1,3,3,1,3,3,1</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>7A+ Benchmark</item><item>Intro to two finger pocket</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>5,4,4,5,7,6,6,7,6,6,1,3,3,1,1,4,4,1,4,4,1,3,3,1</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,2,2,3,3,3,3</item>
+
+
+        <item>7B Benchmark</item><item>Intro to two front grip</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>4,5,5,4,2,4,4,2,7,1,1,7,4,4,3,4,4,3</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>7B+ Benchmark</item><item>Intro to two front grip</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>4,5,5,4,7,2,2,7,3,6,6,3,4,4,3,4,4,3</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+
+        <item>7C Benchmark</item><item>Make sure middle finger is strong</item>
+        <item>10,1,10,0,2,30,60</item>
+        <item>2,7,7,2,6,5,5,6,5,5,7,7,3,6,6,3,4,7,7,4</item>
+        <item>1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+
     </string-array>
 
     <string-array name="mooneasy_benchmarks">
-        <item>no programs</item><item>Grips &amp; Grades test</item>
-        <item>6,6,7,3,150,360</item>
+        <item>5C Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>1,6,6,1,3,4,4,3,2,1,1,2</item>
         <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>2,2,4,5,5,4,1,4,4,1,1,1</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6B Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>2,5,5,2,5,5,3,2,2,3,4,2,2,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6C Benchmark</item><item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>5,5,4,5,5,4,2,2,3,5,5,3,3,3</item>
+        <item>1,1,2,2,2,2,2,2,3,3,3,3,3,3</item>
+
+
+        <item>7A Benchmark</item><item>Intro to two finger pocket</item>
+        <item>11,1,10,0,2,40,80</item>
+        <item>2,2,5,5,6,6,2,2,5,5,6,6,6,6,1,1,7,7,4,4,1,1</item>
+        <item>2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5,5,5,5,5</item>
+
+
     </string-array>
 
     <string-array name="meto_benchmarks">
